2008-04-22  Tor Arne Vestbø  <tavestbo@trolltech.com>

        Reviewed by Simon.

        Implemented the generation of the title string for images.

        * platform/qt/Localizations.cpp:

2008-04-22  Simon Hausmann  <hausmann@webkit.org>

        Qt build fix.

        * platform/qt/RenderThemeQt.cpp: Adjust isControlStyled signature to
        the signature in the base class.
        * platform/qt/RenderThemeQt.h: Ditto.

2008-04-19  Jon Honeycutt  <jhoneycutt@apple.com>

        Reviewed by Darin.

        Add a method to get the AccessibilityObject's access key,

        * page/AccessibilityObject.cpp:
        (WebCore::AccessibilityObject::accessKey): Added; returns the object's
        access key attribute.
        * page/AccessibilityObject.h: Added declaration for accessKey().

2008-04-21  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders Carlsson.

        Fix numerous crashing tests.

        * html/HTMLHtmlElement.cpp:
        (WebCore::HTMLHtmlElement::insertedIntoDocument): Null check document->frame().

2008-04-21  Dan Bernstein  <mitz@apple.com>

        Reviewed by Darin Adler.

        Tests: fast/media/implicit-media-all.html
               fast/media/monochrome.html

        - allow implicit "all" media in media queries
        - use a value of 0 for the monochrome media feature on color displays

        * css/CSSGrammar.y:
        * css/CSSParser.cpp:
        (WebCore::CSSParser::createFloatingMediaQuery):
        * css/CSSParser.h:
        * css/MediaQueryEvaluator.cpp:
        (WebCore::monochromeMediaFeatureEval):

2008-04-21  Brady Eidson  <beidson@apple.com>

        Rockingly reviewed by Adele

        Small StorageArea cleanups

        * storage/SessionStorageArea.cpp:
        (WebCore::SessionStorageArea::copy): Pass "this" instead of the StorageMap belonging to this
        (WebCore::SessionStorageArea::SessionStorageArea):
        * storage/SessionStorageArea.h:
