@@ -2,6 +2,15 @@
 
         Reviewed by Simon.
 
+        Fall back to last path component for suggested filename if the HTTP content disposition is not set.
+
+        * platform/network/qt/QNetworkReplyHandler.cpp:
+        (WebCore::QNetworkReplyHandler::sendResponseIfNeeded):
+
+2008-04-22  Tor Arne Vestbø  <tavestbo@trolltech.com>
+
+        Reviewed by Simon.
+
         Implemented the generation of the title string for images.
 
         * platform/qt/Localizations.cpp:
